<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoundNotes</string>
    <string name="title_note_detail">Note Detail</string>

    <string name="empty_list_msg">"The list is empty.\nTap the button '+' to create a new note!"</string>

    <string name="list_rec_description">recording</string>

    <string name="new_note_name">Untitled</string>
    <string name="new_note_alert_title">New Note</string>
    <string name="new_note_alert_message">Title:</string>
    <string name="renaming_title">Rename note</string>
    <string name="renaming_message">New title:</string>
    <string name="delete_rec_title">Are you sure you want to delete this recording?</string>
    <string name="delete_rec_fail">Unable to delete this recording. Restart the app and try again.</string>

    <string name="alert_key_ok">OK</string>
    <string name="alert_key_delete">DELETE</string>
    <string name="alert_key_cancel">Cancel</string>

    <string name="action_new">New note</string>
    <string name="action_hide_note_list">Hide note list</string>
    <string name="action_rec">Start recording</string>
    <string name="action_del">Delete recording</string>
    <string name="action_play">Play</string>
    <string name="action_search">Search</string>
    <string name="action_share_full">Share text and audio</string>
    <string name="action_share_full_chooser">Share text and audio to&#8230;</string>
    <string name="action_share_text">Share text</string>
    <string name="action_share_text_chooser">Share text to&#8230;</string>
    <string name="action_share_curr_rec">Share this recording</string>
    <string name="action_share_curr_rec_chooser">Share recording to&#8230;</string>
    <string name="action_settings">Settings</string>

    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_rename_fail">Unable to rename this note. Restart the app and try again.</string>
    <string name="action_delete_fail">Unable to delete this note. Restart the app and try again.</string>

    <string name="fab_new">New note button</string>

    <!--<string name="rec_prepare_error">Error during recorder initialization. Please send a bug report.</string>-->
    <string name="action_rec_startfail">There was an error with the audio recorder. Please restart your phone and try again.</string>
    <string name="action_rec_stopfail">I couldn\'t stop the recording.</string>

    <string name="notif_rec_title">Recording</string>
    <string name="notif_play_title">Playing recording</string>
    <!--<string name="notif_text_prefix">Note name: \'</string>-->
    <!--<string name="notif_text_suffix">\'</string>-->
    <string name="notif_rec_stop">Stop</string>
    <string name="notif_play_stop">Stop</string>

    <string name="time_preposition">at</string>

    <string name="rec_forbidden_backspace">You can\'t delete that. There\'s some text in the previous line.</string>
    <string name="rec_forbidden_backspace_rec_before">You can\'t delete that. The previous line belongs to another recording.</string>
    <string name="rec_forbidden_del_middle_rec">You can only delete text from a single recording.</string>
    <string name="rec_forbidden_cut_middle_rec">You can only cut text from a single recording.</string>
    <string name="rec_forbidden_position">I can\'t. There\'s already a recording here.</string>
    <string name="rec_forbidden_start">I can\'t. I\'m already recording.</string>
    <string name="rec_forbidden_stop">You can only stop recording from the note in which you started.</string>
    <string name="rec_forbidden_play">You can\'t play while recording.</string>
    <string name="rec_forbidden_play_empty">There are no recordings to play here.</string>
    <string name="rec_forbidden_rec_playing">You can\'t record audio while playing.</string>
    <string name="rec_forbidden_del_rec">There are no recordings to delete here.</string>
    <string name="rec_forbidden_share_curr_rec">There are no recordings to share here.</string>

    <string name="setting_hide_note_text">Hide note title in the notification</string>

</resources>
