<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- New Note -->
    <item android:id="@+id/action_new"
          android:icon="@drawable/ic_action_new"
          android:title="@string/action_new"
          android:orderInCategory="1"
          android:showAsAction="always" />
    
    <!-- Search -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
        android:orderInCategory="10"
          android:showAsAction="ifRoom" />
    
    <!-- Settings -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
        android:orderInCategory="20"
          android:showAsAction="never" />
</menu>